:sparkles: finished grpc equivalent getlatestfinalizedblocksummary
